<resources>
    <string name="app_name">CheckPlz</string>
    <string name="action_add">Add</string>
    <string name="action_done">Done</string>
    <string name="person_subtotal">Subtotal:</string>
    <string name="person_tax">Tax:</string>
    <string name="person_tip">Tip:</string>
    <string name="person_total">Total:</string>
    <string name="person_subtotal_amount">0</string>
    <string name="person_tax_amount">0</string>
    <string name="person_tip_amount">0</string>
    <string name="person_total_amount">0</string>
    <string name="name">Name:</string>
    <string name="person_order_column_name">Order Name</string>
    <string name="person_order_column_cost">Cost</string>
    <string name="person_order_column_amount">Amount</string>
    <string name="person_order_name_weight">1</string>
    <string name="person_order_cost_weight">.4</string>
    <string name="person_order_amount_weight">.2</string>
    <string name="add_person_plus_symbol">+</string>
    <string name="add_person_text">Add Person</string>
    <string name="add_person_order">Add Order</string>
    <string name="delete_person_order">Delete Order</string>
    <string name="person_order_name">Order</string>
    <string name="person_order_cost">0.00</string>
    <string name="person_order_multiple_symbol">x</string>
    <string name="person_order_multiple_amount">1</string>
    <string name="person_name_input_field">150dp</string>
</resources>
