<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/person_name_list_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="name1"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/person_subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_subtotal"/>

            <TextView
                android:id="@+id/person_tax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_tax"/>

            <TextView
                android:id="@+id/person_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_tip"/>

            <TextView
                android:id="@+id/person_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_total"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/person_subtotal_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_total_amount"/>

            <TextView
                android:id="@+id/person_tax_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_tax_amount"/>

            <TextView
                android:id="@+id/person_tip_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_tip_amount"/>

            <TextView
                android:id="@+id/person_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_total_amount"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>