<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonInputBillActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/person_name_input_bill_activity"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:maxLength="14"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/order_column_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="@string/person_order_name_weight"
                    android:gravity="center_horizontal"
                    android:text="@string/person_order_column_name"/>

                <TextView
                    android:id="@+id/order_column_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="@string/person_order_cost_weight"
                    android:gravity="center_horizontal"
                    android:text="@string/person_order_column_cost" />

                <TextView
                    android:id="@+id/order_column_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="@string/person_order_amount_weight"
                    android:gravity="center_horizontal"
                    android:text="@string/person_order_column_amount"
                    android:paddingRight="20dp"/>
            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_person_order_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/top_layout"
            android:layout_above="@+id/bottom_layout"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_layout"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_order_button"
                android:text="@string/add_person_order"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/delete_order_button"
                android:text="@string/delete_person_order"
                android:layout_weight="1" />
        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>